// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialize() should initialize app 1`] = `
Array [
  Object {
    "payload": Array [],
    "type": "MOCK/COMMONS/ACTIONS/GET_USER_SETTING",
  },
  Object {
    "payload": Object {
      "user": Object {
        "departmentCode": "SD-0001",
        "departmentName": "SD",
        "employeeCode": "001",
        "employeeName": "FUGA HOGE",
        "employeePhotoUrl": "",
        "id": "abcd001",
        "isDelegated": true,
        "managerName": "XXX",
        "title": "Senior Engineer",
      },
    },
    "type": "/DAILY-SUMMARY/ENTITIES/USER/SET",
  },
  Object {
    "payload": Object {
      "approveAttDailyRequestByDelegate": false,
      "approveAttRequestByDelegate": false,
      "approveSelfAttDailyRequestByEmployee": false,
      "approveSelfAttRequestByEmployee": false,
      "canBulkApproveAttDailyRequest": false,
      "canBulkApproveAttRequest": false,
      "cancelAttApprovalByDelegate": false,
      "cancelAttApprovalByEmployee": false,
      "cancelAttDailyApprovalByDelegate": false,
      "cancelAttDailyApprovalByEmployee": false,
      "cancelAttDailyRequestByDelegate": false,
      "cancelAttRequestByDelegate": false,
      "cancelTimeApprovalByDelegate": false,
      "cancelTimeApprovalByEmployee": false,
      "cancelTimeRequestByDelegate": false,
      "editAttTimeSheetByDelegate": false,
      "editTimeTrackByDelegate": false,
      "manageAccountingPeriod": false,
      "manageAttAgreementAlertSetting": false,
      "manageAttLeave": false,
      "manageAttLeaveGrant": false,
      "manageAttLeaveOfAbsence": false,
      "manageAttLeaveOfAbsenceApply": false,
      "manageAttPattern": false,
      "manageAttPatternApply": false,
      "manageAttShortTimeSettingApply": false,
      "manageAttShortTimeWorkSetting": false,
      "manageAttShortTimeWorkSettingApply": false,
      "manageAttWorkingType": false,
      "manageCalendar": false,
      "manageCostCenter": false,
      "manageDepartment": false,
      "manageEmployee": false,
      "manageEmployeeGroup": false,
      "manageExchangeRate": false,
      "manageExpCreditCard": false,
      "manageExpCustomHint": false,
      "manageExpSetting": false,
      "manageExpTypeGroup": false,
      "manageExpenseType": false,
      "manageExtendedItem": false,
      "manageJob": false,
      "manageJobType": false,
      "manageMobileSetting": false,
      "manageOrgHPattern": false,
      "manageOverallSetting": false,
      "managePermission": false,
      "managePlannerSetting": false,
      "managePosition": false,
      "managePsaExtendedItem": false,
      "managePsaGroup": false,
      "managePsaJobGrade": false,
      "managePsaSetting": false,
      "managePsaSkillset": false,
      "manageReportType": false,
      "manageTaxType": false,
      "manageTimeRecordItemImport": false,
      "manageTimeSetting": false,
      "manageTimeWorkCategory": false,
      "manageVendor": false,
      "submitAttDailyRequestByDelegate": false,
      "submitAttRequestByDelegate": false,
      "submitTimeRequestByDelegate": false,
      "switchCompany": false,
      "viewAttTimeSheetByDelegate": false,
      "viewTimeTrackByDelegate": false,
    },
    "type": "COMMONS/ACCESS_CONTROL/SET_USER_PERMISSION",
  },
]
`;

exports[`showErrorNotification() should dispatch to hide error notifications 1`] = `
Array [
  Object {
    "type": "COMMONS/MODULES/TOAST/HIDE",
  },
  Object {
    "type": "/DAILY-SUMMARY/UI/BLOCKING/DISABLE",
  },
]
`;

exports[`showErrorNotification() should dispatch to reset error notifications 1`] = `
Array [
  Object {
    "type": "COMMONS/MODULES/TOAST/RESET",
  },
]
`;

exports[`showErrorNotification() should dispatch to show error notifications 1`] = `
Array [
  Object {
    "type": "/DAILY-SUMMARY/UI/BLOCKING/ENABLE",
  },
  Object {
    "payload": Object {
      "message": "test",
      "options": undefined,
      "variant": "error",
    },
    "type": "COMMONS/MODULES/TOAST/SHOW",
  },
]
`;
